# cpp-basic-template

./: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt
